@@ -25,10 +25,7 @@ import uk.gov.hmcts.reform.adoption.adoptioncase.model.UserRole;
 import uk.gov.hmcts.reform.adoption.idam.IdamService;
 
 import java.time.Clock;
-import java.time.Instant;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
@@ -45,7 +42,7 @@ import static uk.gov.hmcts.reform.adoption.testutil.TestConstants.TEST_AUTHORIZA
 import static uk.gov.hmcts.reform.adoption.testutil.TestDataHelper.caseData;
 
 @ExtendWith(MockitoExtension.class)
-public class CaseworkerSendOrReplyTest extends EventTest {
+class CaseworkerSendOrReplyTest extends EventTest {
 
     @Mock
     private HttpServletRequest httpServletRequest;
@@ -76,9 +73,6 @@ public class CaseworkerSendOrReplyTest extends EventTest {
         var caseDetails = getCaseDetails();
         caseDetails.getData().setMessageAction(MessageSendDetails.MessagesAction.SEND_A_MESSAGE);
         caseDetails.getData().setMessageSendDetails(getOpenMessageObject());
-        final var instant = Instant.now();
-        final var zoneId = ZoneId.systemDefault();
-        final var expectedDate = LocalDate.ofInstant(instant, zoneId);
         when(httpServletRequest.getHeader(AUTHORIZATION)).thenReturn(TEST_AUTHORIZATION_TOKEN);
         when(idamService.retrieveUser(TEST_AUTHORIZATION_TOKEN)).thenReturn(getCaseworkerUser());
         var result = caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
@@ -122,15 +116,12 @@ public class CaseworkerSendOrReplyTest extends EventTest {
         ));
 
         caseDetails.getData().setReplyMsgDynamicList(DynamicList.builder().listItems(replyMessageList).value(
-            replyMessageList.get(0)).build());
-        final var instant = Instant.now();
-        final var zoneId = ZoneId.systemDefault();
-        final var expectedDate = LocalDate.ofInstant(instant, zoneId);
+            replyMessageList.getFirst()).build());
         when(httpServletRequest.getHeader(AUTHORIZATION)).thenReturn(TEST_AUTHORIZATION_TOKEN);
         when(idamService.retrieveUser(TEST_AUTHORIZATION_TOKEN)).thenReturn(getCaseworkerUser());
         var result = caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
         assertThat(result.getData().getListOfOpenMessages()).hasSize(1);
-        assertThat(result.getData().getListOfOpenMessages().get(0).getValue().getMessageId()).isEqualTo(latestMessage.getMessageId());
+        assertThat(result.getData().getListOfOpenMessages().getFirst().getValue().getMessageId()).isEqualTo(latestMessage.getMessageId());
     }
 
     @Test
@@ -154,13 +145,10 @@ public class CaseworkerSendOrReplyTest extends EventTest {
         ));
 
         caseDetails.getData().setReplyMsgDynamicList(DynamicList.builder().listItems(replyMessageList).value(
-            replyMessageList.get(0)).build());
-        final var instant = Instant.now();
-        final var zoneId = ZoneId.systemDefault();
-        final var expectedDate = LocalDate.ofInstant(instant, zoneId);
+            replyMessageList.getFirst()).build());
         when(httpServletRequest.getHeader(AUTHORIZATION)).thenReturn(TEST_AUTHORIZATION_TOKEN);
         when(idamService.retrieveUser(TEST_AUTHORIZATION_TOKEN)).thenReturn(getJudgeUser());
-        var result = caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
+        caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
         assertThat(caseDetails.getData().getListOfOpenMessages()).isEmpty();
         assertThat(caseDetails.getData().getClosedMessages()).hasSize(1);
 
